--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-super-grid": "^4.1.3",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4"
