--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.20.4",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
