--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.20.4",
     "react-native": "0.64.3",
+    "react-native-awesome-alerts": "^1.5.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
