--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
+    "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.20.4",
     "react-native": "0.64.3",
     "react-native-awesome-alerts": "^1.5.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
